config parsing now integrated with main program

--- a/config.cfg
+++ b/config.cfg
@@ -1,5 +1,5 @@
 my_domain=bonnekamp.com
 from=sam@bonnekamp.com
-to=sam@sam-bonnekamp.com
-peer_domain=aspmx.l.google.com
+to=sam@fish
+peer_domain=fish
 port=25
